@@ -1,6 +1,10 @@
 
 2021-07-05  Ron Norman <rjn@inglenet.com>
 
+	* reportio.c: Fix to invoke DECLARATIVES for DETAIL line
+
+2021-07-05  Ron Norman <rjn@inglenet.com>
+
 	* common.h: Added  cob_file   flag_is_concat, org_filename and nxt_filename
 	* common.c: Handle runtime options COB_SEQ_CONCAT_NAME and
 				COB_SEQ_CONCAT_SEP used for 'concatenated input files'
